// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parity corpus (locked to Ruby-matching output) > badge 1`] = `"<wa-badge variant="brand" appearance="filled" pill><strong>New</strong>&nbsp;stuff</wa-badge>"`;

exports[`parity corpus (locked to Ruby-matching output) > button-link 1`] = `"<wa-button variant="brand" size="large" href="https://x.com/a.zip" target="_blank" rel="noopener noreferrer" download><wa-icon slot="start" name="download"></wa-icon><strong>Get</strong>&nbsp;it</wa-button>"`;

exports[`parity corpus (locked to Ruby-matching output) > callout 1`] = `
"<wa-callout variant="brand"><wa-icon slot="icon" name="circle-info" variant="solid"></wa-icon><p>Hello <strong>world</strong> and <code>code</code></p>
</wa-callout>"
`;

exports[`parity corpus (locked to Ruby-matching output) > callout-attrs 1`] = `
"<wa-callout variant="warning" appearance="filled-outlined" size="large"><wa-icon slot="icon" name="shield" family="sharp" variant="regular" animation="bounce"></wa-icon><p>Heads up</p>
</wa-callout>"
`;

exports[`parity corpus (locked to Ruby-matching output) > callout-in-accordion 1`] = `
"<wa-accordion appearance="outlined"><wa-accordion-item label="Section"><wa-callout variant="success"><wa-icon slot="icon" name="circle-check" variant="solid"></wa-icon><p>Nested <strong>callout</strong> text.</p>
</wa-callout>
</wa-accordion-item></wa-accordion>"
`;

exports[`parity corpus (locked to Ruby-matching output) > callout-in-card 1`] = `
"<wa-card><wa-callout variant="warning"><wa-icon slot="icon" name="triangle-exclamation" variant="solid"></wa-icon><p>Card-nested callout.</p>
</wa-callout>
</wa-card>"
`;

exports[`parity corpus (locked to Ruby-matching output) > callout-in-details 1`] = `
"<wa-details appearance='outlined' icon-placement='end'><span slot='summary'><p>Summary</p>
</span><wa-callout variant="brand"><wa-icon slot="icon" name="circle-info" variant="solid"></wa-icon><p>Details callout.</p>
</wa-callout>
</wa-details>"
`;

exports[`parity corpus (locked to Ruby-matching output) > callout-in-tab-panel 1`] = `
"<wa-tab-group placement="top"><wa-tab panel="tab-1">Tab 1</wa-tab><wa-tab-panel name="tab-1"><wa-callout variant="brand"><wa-icon slot="icon" name="circle-info" variant="solid"></wa-icon><p>Tab callout body.</p>
</wa-callout>
</wa-tab-panel></wa-tab-group>"
`;

exports[`parity corpus (locked to Ruby-matching output) > comparison 1`] = `"<wa-comparison position="50"><img slot="before" src="b.jpg" alt="Before" /><img slot="after" src="a.jpg" alt="After" /></wa-comparison>"`;

exports[`parity corpus (locked to Ruby-matching output) > date-block 1`] = `"<wa-format-date date="2026-06-26" weekday="long" year="numeric" month="long" day="numeric" lang="fr"></wa-format-date>"`;

exports[`parity corpus (locked to Ruby-matching output) > date-inline-datetime 1`] = `"Released <wa-format-date date="2026-06-26T14:30:00Z" year="numeric" month="short" day="numeric" hour="numeric" minute="numeric" hour-format="24"></wa-format-date>."`;

exports[`parity corpus (locked to Ruby-matching output) > date-inline-granular 1`] = `"<wa-format-date date="2026-06-26" weekday="long" year="numeric" month="short" day="numeric" lang="fr"></wa-format-date>"`;

exports[`parity corpus (locked to Ruby-matching output) > date-inline-style 1`] = `"Published <wa-format-date date="2026-06-26" year="numeric" month="long" day="numeric"></wa-format-date>."`;

exports[`parity corpus (locked to Ruby-matching output) > date-relative 1`] = `"Updated <wa-relative-time date="2026-06-20" format="short" numeric="always"></wa-relative-time>."`;

exports[`parity corpus (locked to Ruby-matching output) > date-relative-sync 1`] = `"Live <wa-relative-time date="2026-06-20" sync></wa-relative-time>"`;

exports[`parity corpus (locked to Ruby-matching output) > layout-flank 1`] = `
"<div class="wa-flank:start wa-gap-m" style="--flank-size: 200px; --content-percentage: 60%">
Side
</div>"
`;

exports[`parity corpus (locked to Ruby-matching output) > popover-aligned-skidding-block 1`] = `
"<wa-button id='popover-d69e481a' appearance='plain'>Trigger</wa-button>
<wa-popover for='popover-d69e481a' placement='bottom-start' skidding='12'>
<p>Body</p>

</wa-popover>"
`;

exports[`parity corpus (locked to Ruby-matching output) > popover-aligned-skidding-inline 1`] = `"Click <button type='button' id='popover-4a7c813a' class='ma-popover-trigger' style='background: none; border: none; padding: 0; color: inherit; text-decoration: underline; text-decoration-style: dotted; cursor: pointer; font: inherit;'>here</button><wa-popover for='popover-4a7c813a' placement='right-start' skidding='-4'>Aligned popover</wa-popover> now."`;

exports[`parity corpus (locked to Ruby-matching output) > tabs-disabled 1`] = `
"<wa-tab-group placement="top"><wa-tab panel="tab-1">Tab 1</wa-tab><wa-tab panel="tab-2" disabled>Coming soon</wa-tab><wa-tab-panel name="tab-1"><p>Content 1</p>
</wa-tab-panel><wa-tab-panel name="tab-2"><p>Not yet available.</p>
</wa-tab-panel></wa-tab-group>"
`;

exports[`parity corpus (locked to Ruby-matching output) > tag-inline 1`] = `"Status: <wa-tag variant="success"><wa-icon name="check"></wa-icon>Done</wa-tag> ok"`;

exports[`parity corpus (locked to Ruby-matching output) > tooltip 1`] = `"<span id="tooltip-6ea8fe9c" tabindex="0" class="ma-tooltip-anchor" style="text-decoration: underline dotted; cursor: help;">API term</span><wa-tooltip for="tooltip-6ea8fe9c" placement="top" distance="5">Application Programming Interface</wa-tooltip>"`;

exports[`parity corpus (locked to Ruby-matching output) > tooltip-aligned-skidding-block 1`] = `"<span id="tooltip-d8acae7a" tabindex="0" class="ma-tooltip-anchor" style="text-decoration: underline dotted; cursor: help;">REST</span><wa-tooltip for="tooltip-d8acae7a" placement="bottom-end" distance="8" skidding="12">Representational State Transfer</wa-tooltip>"`;

exports[`parity corpus (locked to Ruby-matching output) > tooltip-aligned-skidding-inline 1`] = `"<span id="tooltip-62ab914f" tabindex="0" class="ma-tooltip-anchor" style="text-decoration: underline dotted; cursor: help;">API</span><wa-tooltip for="tooltip-62ab914f" placement="right-end" skidding="-4">Application Programming Interface</wa-tooltip>"`;

exports[`parity corpus (locked to Ruby-matching output) > tree-alt-per-node-expanded 1`] = `"<wa-tree><wa-tree-item expanded><wa-icon name="folder"></wa-icon>src<wa-tree-item><wa-icon name="file"></wa-icon>index.ts</wa-tree-item></wa-tree-item><wa-tree-item>README.md</wa-tree-item></wa-tree>"`;

exports[`parity corpus (locked to Ruby-matching output) > tree-invoice 1`] = `"<wa-tree><wa-tree-item expanded>Invoice<wa-tree-item>cbc:CustomizationID</wa-tree-item><wa-tree-item>cbc:ID</wa-tree-item><wa-tree-item>cbc:IssueDate</wa-tree-item><wa-tree-item expanded>cac:AccountingSupplierParty<wa-tree-item expanded>cac:Party<wa-tree-item>cac:PostalAddress</wa-tree-item><wa-tree-item>cac:PartyLegalEntity</wa-tree-item></wa-tree-item></wa-tree-item><wa-tree-item expanded>cac:AccountingCustomerParty<wa-tree-item>cac:Party</wa-tree-item></wa-tree-item><wa-tree-item expanded>cac:InvoiceLine<wa-tree-item>cbc:ID</wa-tree-item><wa-tree-item>cbc:InvoicedQuantity</wa-tree-item><wa-tree-item expanded>cac:Item<wa-tree-item>cbc:Name</wa-tree-item><wa-tree-item>cac:Price</wa-tree-item></wa-tree-item></wa-tree-item></wa-tree-item></wa-tree>"`;

exports[`parity corpus (locked to Ruby-matching output) > tree-zip 1`] = `"<wa-tree><wa-tree-item expanded><wa-icon name="folder"></wa-icon>my-plugin<wa-tree-item expanded><wa-icon name="folder"></wa-icon>dist<wa-tree-item><wa-icon name="file-code"></wa-icon>index.js</wa-tree-item><wa-tree-item><wa-icon name="file-code"></wa-icon>index.d.ts</wa-tree-item></wa-tree-item><wa-tree-item expanded><wa-icon name="folder"></wa-icon>src<wa-tree-item><wa-icon name="file-code"></wa-icon>index.ts</wa-tree-item></wa-tree-item><wa-tree-item><wa-icon name="file"></wa-icon>README.md</wa-tree-item><wa-tree-item><wa-icon name="file"></wa-icon>package.json</wa-tree-item></wa-tree-item><wa-tree-item><wa-icon name="file"></wa-icon>LICENSE</wa-tree-item></wa-tree>"`;

exports[`parity corpus (locked to Ruby-matching output) > video-alt 1`] = `"<wa-video src="v.mp4" title="Clip" preload="none" loop></wa-video>"`;

exports[`parity corpus (locked to Ruby-matching output) > video-block 1`] = `"<wa-video src="test_video.mp4" poster="test_video_poster.jpg" title="My Clip" controls="full" autoplay muted></wa-video>"`;

exports[`parity corpus (locked to Ruby-matching output) > video-playlist-alt 1`] = `"<wa-video-playlist controls="none"><wa-video src="1.mp4" title="One"></wa-video><wa-video src="2.mp4" poster="2.jpg" title="Two"></wa-video></wa-video-playlist>"`;

exports[`parity corpus (locked to Ruby-matching output) > video-playlist-block 1`] = `"<wa-video-playlist controls="standard"><wa-video src="a.mp4" poster="a.jpg" title="Part 1"></wa-video><wa-video src="b.mp4" title="Part 2"></wa-video></wa-video-playlist>"`;
